--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(0.648 0.2 131.684);
+  --primary: #00DC33;
   --primary-foreground: oklch(0.986 0.031 120.757);
   --secondary: oklch(0.967 0.001 286.375);
   --secondary-foreground: oklch(0.21 0.006 285.885);
@@ -86,7 +86,7 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.648 0.2 131.684);
+  --primary: #00DC33;
   --primary-foreground: oklch(0.986 0.031 120.757);
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
@@ -124,5 +124,9 @@
 
   .my-container {
     @apply max-w-6xl mx-auto px-4;
+  }
+
+  .btn-animate {
+    @apply relative z-1 hover:text-white before:w-full before:h-full before:absolute before:top-0 before:left-0 before:bg-black before:-z-1 before:scale-x-0 hover:before:scale-x-100 before:duration-300 before:origin-left overflow-hidden;
   }
 }
